# AgentEval

./: .gitignore  LICENSE  README.md  pyproject.toml
containers/: agent_containers.sh
docs/: docker_secrets_guide.md
examples/: quickstart.py
src/agent_eval/: __init__.py  api_keys.py  callers.py  models.py
tests/: test_callers.py
